# SuperEngine3D

./: CMakeLists.txt  README.md
assets/: 2d_simple.frag  2d_simple.vert  3d_simple.frag  3d_simple.vert  particle_system.frag  particle_system.vert  pbr_with_shadows.frag  pbr_with_shadows.vert
src/: CMakeLists.txt
src/Engine/Core/: animation.cpp  camera.cpp  downloader.cpp  light.cpp  main.cpp  mathematica.cpp  object.cpp  particle.cpp  shaders.cpp  sun.cpp  timer.cpp
src/Engine/Shaders/: shader_2d_simple.cpp  shader_3d_simple.cpp  shader_particle_system.cpp  shader_pbr_with_shadows.cpp
src/Engine/include/: animation.h  camera.h  downloader.h  ilevel.h  ishader.h  levels.h  light.h  main.h  mathematica.h  object.h  particle.h  shader_2d_simple.h  shader_3d_simple.h  shader_particle_system.h  shader_pbr_with_shadows.h  shaders.h  sun.h  timer.h  vdata.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
tools/objtores/: main.c  makefile
tools/pbr_to_res/: main.cpp  makefile
tools/pngtores/: main.cpp  makefile
tools/pngtores1/: main.cpp  makefile
tools/seriesobjtores/: main.c  makefile  objtores
